Whitespace fixed on little content pages

--- a/pycon_portugal_2024/static/css/project.css
+++ b/pycon_portugal_2024/static/css/project.css
@@ -29,6 +29,7 @@ body {
 }
 
 .inner-body {
+  min-height: 68vh;
   background-color: #0A042C;
 }
 
@@ -110,6 +111,7 @@ body {
 }
 
 .inner-body {
+  min-height: 68vh;
   background-color: #0A042C;
 }
 
@@ -313,6 +315,7 @@ body {
 }
 
 .inner-body {
+  min-height: 68vh;
   background-color: #0A042C;
 }
 
@@ -464,6 +467,7 @@ body {
 }
 
 .inner-body {
+  min-height: 68vh;
   background-color: #0A042C;
 }
 
@@ -841,6 +845,7 @@ body {
 }
 
 .inner-body {
+  min-height: 68vh;
   background-color: #0A042C;
 }
 
