--- a/pycon_portugal_2024/static/sass/_base.scss
+++ b/pycon_portugal_2024/static/sass/_base.scss
@@ -11,6 +11,7 @@ body {
 }
 
 .inner-body {
+    min-height: 68vh;
     background-color: #0A042C;
 }
 
